# adopt-a-seed

./: README.md  docker-compose.yml
adopt-a-seed/: Dockerfile  README.md  eslint.config.mjs  package.json
adopt-a-seed-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
adopt-a-seed-api/app/: app.py  mock_data_helper.py  oauth2_helper.py  prompts.py  settings.py
adopt-a-seed-api/app/models/: Event.py  EventType.py  KoppenClimateClassification.py  Plant.py  PlantStatus.py  Seed.py  SeedDatabase.py  SeedToSeedDatabase.py  User.py  __init__.py
adopt-a-seed-api/app/routers/: __init__.py  plants.py  seed_databases.py  seeds.py  users.py
adopt-a-seed/app/: globals.css  layout.tsx  page.tsx
adopt-a-seed/app/context/: DataContext.tsx
adopt-a-seed/app/dashboard/: page.tsx
adopt-a-seed/app/login/: login-form.tsx
adopt-a-seed/app/start-growing-process/: page.tsx
adopt-a-seed/app/view-events/components/: event-entry.tsx  event-list.tsx
adopt-a-seed/app/view-grow-information/[id]/: PlantDetails.tsx  PlantPage.tsx  page.tsx
adopt-a-seed/app/view-grow-information/components/: help-alert.tsx  plant-details.tsx  plant-page.tsx  plant-survey.tsx
adopt-a-seed/app/view-leaderboard/: page.tsx
adopt-a-seed/app/view-plants/components/: plant-card.tsx  plants-carousel.tsx
adopt-a-seed/app/view-seed-database/: page.tsx
adopt-a-seed/components/: combobox.tsx  date-picker.tsx  footer.tsx  header.tsx  plant-card.tsx
adopt-a-seed/lib/: event.tsx  plant.ts  seed-database.ts  seed.ts  use-api.tsx
(+2 files in other folders)
